infra/k8s/chatalk/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: ui
        image: registry.chatalk.fr/ui:master
        imagePullPolicy: Always
