infra/k8s/chatalk/ui/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ui
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - chatalk.fr
    - www.chatalk.fr
    secretName: chatalk-cert
  rules:
  - host: chatalk.fr
    http:
      paths:
      - backend:
          serviceName: ui
          servicePort: 80
